<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Title:"
        android:textSize="28dp"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/expense_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="24dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Details:"
        android:textSize="28dp"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expense_edit_amount_label"
            android:paddingLeft="10dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/expense_amount_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:gravity="right"
            android:textAlignment="gravity"
            android:paddingRight="8dp"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expense_pay_date_label"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/expense_pay_date_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:paddingRight="10dp"
            android:theme="@style/DateDialogButton"
            style = "@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expense_frequency_label"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/expense_frequency_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textAlignment="gravity"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/edit_item_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_label"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/edit_item_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button_label"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>
