<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Title:"
        android:textSize="28dp"
        style="?android:listSeparatorTextViewStyle"/>

    <TextView
        android:id="@+id/income_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="24dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Details:"
        android:textSize="28dp"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_amount_label"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/income_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textAlignment="gravity"
            android:paddingRight="10dp"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_collection_date_label"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/income_next_collection_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textAlignment="gravity"
            android:paddingRight="10dp"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_frequency_label"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/income_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textAlignment="gravity"
            android:paddingRight="10dp"
            android:textSize="20dp"/>

    </LinearLayout>

</LinearLayout>